front end usuario, falta base de datos

--- a/Back/libreria-sb/src/main/resources/application.properties
+++ b/Back/libreria-sb/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# Datasource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+#planet scale
+spring.datasource.url=jdbc:mysql://us-east.connect.psdb.cloud/libreria?sslMode=VERIFY_IDENTITY
+spring.datasource.username=0yw89ij8t8x7sj3eeo8z
+spring.datasource.password=pscale_pw_XaQI0K9qjXvxEzSq1HCeKbLFIECeFVCeX3bp5MPqDWR
+
+#cracion y actualizacion de base de datos a partir del modelo
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# numero de conexiones a la base de datos
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=10
