--- a/Back/libreria-sb/src/main/resources/application.properties
+++ b/Back/libreria-sb/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #planet scale
-spring.datasource.url=jdbc:mysql://us-east.connect.psdb.cloud/libreria?sslMode=VERIFY_IDENTITY
-spring.datasource.username=0yw89ij8t8x7sj3eeo8z
-spring.datasource.password=pscale_pw_XaQI0K9qjXvxEzSq1HCeKbLFIECeFVCeX3bp5MPqDWR
+spring.datasource.url=jdbc:mysql://us-east.connect.psdb.cloud/libreria2?sslMode=VERIFY_IDENTITY
+spring.datasource.username=wrkbyhyhhlxwux4etvam
+spring.datasource.password=pscale_pw_9JT0tY6rFpwy6QgwJsI29JdC37q8knNB02NrdpmLp8Q
 
 #cracion y actualizacion de base de datos a partir del modelo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
