--- a/Back/libreria-sb/src/main/resources/application.properties
+++ b/Back/libreria-sb/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #planet scale
-spring.datasource.url=jdbc:mysql://us-east.connect.psdb.cloud/libreria2?sslMode=VERIFY_IDENTITY
-spring.datasource.username=wrkbyhyhhlxwux4etvam
-spring.datasource.password=pscale_pw_9JT0tY6rFpwy6QgwJsI29JdC37q8knNB02NrdpmLp8Q
+spring.datasource.url=jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/libreria?sslMode=VERIFY_IDENTITY
+spring.datasource.username=6coo2i859kmh50812l30
+spring.datasource.password=pscale_pw_lWEzfMPCiakvVAqwwMD7ItcMuZFQcyTz5UXkC96BCOp
 
 #cracion y actualizacion de base de datos a partir del modelo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
