--- a/Back/libreria-sb/src/main/resources/application.properties
+++ b/Back/libreria-sb/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #planet scale
 spring.datasource.url=jdbc:mysql://aws-sa-east-1.connect.psdb.cloud/libreria?sslMode=VERIFY_IDENTITY
-spring.datasource.username=1qg7pg2unbffdp71yrds
-spring.datasource.password=pscale_pw_jWuCY38anb8mvklu3Usv2DbOq4eDw7u5Sd7HxD2n330
+spring.datasource.username=zlkkeexrw7eu4l1dcz0u
+spring.datasource.password=pscale_pw_6LBeHuQu9VCaXjiFQ8bCqE5nDKgukLa5JKyvWOnHOfh
 
 #cracion y actualizacion de base de datos a partir del modelo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # numero de conexiones a la base de datos
 spring.datasource.hikari.minimum-idle=3
