--- a/Back/libreria-sb/pom.xml
+++ b/Back/libreria-sb/pom.xml
@@ -65,6 +65,11 @@
 			<version>5.6.12.Final</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
