--- a/Back/libreria-sb/src/main/resources/application.properties
+++ b/Back/libreria-sb/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.password=pscale_pw_6LBeHuQu9VCaXjiFQ8bCqE5nDKgukLa5JKyvWOnHOfh
 #cracion y actualizacion de base de datos a partir del modelo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=none
+loggin.level.org.hibernate.SQL=DEBUG
+loggin.level.org.hibernate.type=TRACE
 
 # numero de conexiones a la base de datos
 spring.datasource.hikari.minimum-idle=3
